# ClearCore-rust

./: .gitignore  Cargo.toml  ClearCore-rust.sublime-project  LICENSE  README.md
ProjectTemplate/: Cargo.toml  ProjectTemplate.cppproj  README.md
ProjectTemplate/src/: _main.rs
clearcore-rust/: Cargo.toml  build.rs  wrapper.hpp
clearcore-rust/headers/CMSIS/: core_cm0plus.h  core_sc000.h
clearcore-rust/headers/SAME53_DFP/component/: adc.h  cmcc.h  dac.h  dmac.h  dsu.h  gclk.h  gmac.h  i2s.h  nvmctrl.h  pac.h  pcc.h  pdec.h  port.h  qspi.h  rstc.h  rtc.h  sdhc.h  tcc.h  trng.h
clearcore-rust/headers/arm-none-eabi/: math.h
clearcore-rust/headers/arm-none-eabi/c++/6.3.1/: atomic  cmath  cstdlib  functional  valarray
clearcore-rust/headers/arm-none-eabi/c++/6.3.1/bits/: basic_ios.tcc  boost_concept_check.h  fstream.tcc  gslice_array.h  ios_base.h  locale_classes.tcc  locale_facets.tcc  locale_facets_nonio.tcc  random.h  random.tcc  regex_compiler.h  regex_executor.h  regex_executor.tcc  regex_scanner.tcc  sstream.tcc  stl_iterator.h  stl_iterator_base_funcs.h  unique_ptr.h  valarray_after.h  valarray_array.h  valarray_array.tcc
clearcore-rust/headers/arm-none-eabi/c++/6.3.1/experimental/: functional
clearcore-rust/headers/arm-none-eabi/c++/6.3.1/ext/: bitmap_allocator.h  throw_allocator.h
clearcore-rust/headers/arm-none-eabi/c++/6.3.1/parallel/: base.h  equally_split.h  (+6 more)
clearcore-rust/headers/libClearCore/: IpAddress.h
clearcore-rust/src/: bindings.rs  connector.rs  lib.rs
clearcore-rust/src/connector/: digital_inout.rs  led_driver.rs  modes.rs
(+101 files in other folders)
